# embassy-usb-vendor-example

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: bulk.rs  constants.rs  control.rs  main.rs  protocol.rs  rom.rs  types.rs
